Working on a Results Page Step 1) create a page 2)Make it Results

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Patients</h4>
+    <h4>Results</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -158,5 +158,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.patientID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Compare")
 </p>
