--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
@@ -22,7 +22,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Patients", "Index", "Patients")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Compare", "Compare", "Patients")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    
                 </ul>
             </div>
         </div>
