added effectivness field to treatments, effectiveness column to database, updated model, controller, and views to reflect. also forced views to show patientID instead of patient Sex

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/TreatmentsPivots/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/TreatmentsPivots/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Patient.Sex)
+            @Html.DisplayNameFor(model => model.Patient.patientID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Patient.Sex)
+            @Html.DisplayFor(model => model.Patient.patientID)
         </dd>
 
         <dt>
@@ -51,6 +51,9 @@
             @Html.DisplayFor(model => model.PossibleTreatment.Name)
         </dd>
 
+        <dd>
+            @Html.DisplayFor(model => model.effectiveness)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
