--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -14,12 +14,12 @@
             @Html.ActionLink("Patients", "Index", "Patients") <br />
             @Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") <br />
             @Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds") <br />
-            @Html.ActionLink("Possible Family History", "Index", "PossibleFamilyHistories") <br />
+            @*@Html.ActionLink("Possible Family History", "Index", "PossibleFamilyHistories") <br />*@
             @Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments") <br />
             @Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms") <br />
             @Html.ActionLink("Linked Health Factors", "Index", "HealthFactorsPivots") <br />
             @Html.ActionLink("Linked Other Meds", "Index", "OtherMedsPivots") <br />
-            @Html.ActionLink("Linked Family History", "Index", "FamilyHistoryPivots") <br />
+            @*@Html.ActionLink("Linked Family History", "Index", "FamilyHistoryPivots") <br />*@
             @Html.ActionLink("Linked Treatments", "Index", "TreatmentsPivots") <br />
             @Html.ActionLink("Linked Symptoms", "Index", "SymptomsPivots") 
         </p>
