--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Create.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Create.cshtml
@@ -16,9 +16,9 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Sex, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Sex, "Sex", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Sex", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,9 +50,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HistologicalGrade, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.HistologicalGrade, "Histological Grade", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HistologicalGrade, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("HistologicalGrade", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.HistologicalGrade, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -160,7 +160,7 @@
                 @Html.ValidationMessageFor(model => model.Diet, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
