--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Edit.cshtml
@@ -18,9 +18,9 @@
         @Html.HiddenFor(model => model.patientID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Sex, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Sex, "Sex", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Sex", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,9 +52,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.HistologicalGrade, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.HistologicalGrade, "Histological Grade", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.HistologicalGrade, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("HistologicalGrade", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.HistologicalGrade, "", new { @class = "text-danger" })
             </div>
         </div>
