started process to integrate the symptoms, treatments, other meds, and health factors into the patient pages. So far did the create linked symptom and create libked treatment. haven't gotten to create possible symptom or possible treatment.

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
@@ -195,6 +195,8 @@
 
                 <br />
             }
+            @Html.ActionLink("New Symptom", "Create", "SymptomsPivots", new { patientId = Model.patientID }, null)
+            <br />
         </dd>
 
         <dt>
@@ -304,9 +306,11 @@
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.effectiveness)
                 }
-
+                
                 <br />
             }
+            @Html.ActionLink("New Treatment", "Create", "TreatmentsPivots", new { patientId = Model.patientID }, null)
+            <br />
         </dd>
 
     </dl>
