Mostly aesthetic changes

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/HealthFactorsPivots/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/HealthFactorsPivots/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TumorTaskforce_Webapp_1.HealthFactorsPivot
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Health Factor";
 }
 
 <h2>Edit</h2>
