--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -4,30 +4,31 @@
 
 <div class="jumbotron">
     <h1>Tumor Taskforce </h1>
-    <p class="lead">Unreleased. Use the links below to navigate</p>
+    <p class="lead">Unreleased. Use the links above to navigate</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            @Html.ActionLink("Patients", "Index", "Patients") <br />
-            @Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") <br />
-            @Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds") <br />
-            @*@Html.ActionLink("Possible Family History", "Index", "PossibleFamilyHistories") <br />*@
-            @Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments") <br />
-            @Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms") <br />
-            @Html.ActionLink("Linked Health Factors", "Index", "HealthFactorsPivots") <br />
-            @Html.ActionLink("Linked Other Meds", "Index", "OtherMedsPivots") <br />
-            @*@Html.ActionLink("Linked Family History", "Index", "FamilyHistoryPivots") <br />*@
-            @Html.ActionLink("Linked Treatments", "Index", "TreatmentsPivots") <br />
-            @Html.ActionLink("Linked Symptoms", "Index", "SymptomsPivots") 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum interdum porttitor. Suspendisse at arcu ut enim tincidunt lobortis et nec dui. Sed in nisl at elit rutrum consectetur. Vestibulum quis urna id mi dapibus cursus nec sed velit. Nunc faucibus auctor accumsan. Nam volutpat sodales venenatis. Donec ut ultricies metus. Nam feugiat ultricies lectus, sed placerat augue faucibus eget.
         </p>
     </div>
     <div class="col-md-4">
-
+        <h2>More Stuff</h2>
+        <p>
+            Duis augue lacus, pharetra at dapibus in, posuere quis tortor. Cras porttitor libero vel pretium faucibus. Curabitur eget tortor elit. Curabitur vulputate ut magna sed viverra. Ut eleifend ligula turpis. Integer eleifend aliquet scelerisque. Integer facilisis justo ac varius luctus. Suspendisse posuere semper felis at faucibus. Morbi magna magna, aliquet dictum purus non, dignissim fermentum nibh. Aenean sit amet nisi ut erat volutpat cursus in vitae ipsum. Integer tempus, libero vitae imperdiet vestibulum, massa purus porta turpis, finibus scelerisque enim felis at enim. Vivamus eu tincidunt justo. Vivamus finibus sit amet neque sed mattis. Vivamus scelerisque, dui id dignissim mattis, mauris justo efficitur quam, quis finibus turpis lectus nec dolor.
+        </p>
     </div>
     <div class="col-md-4">
-
+        <h2>Even More</h2>
+        <p>
+            Duis augue lacus, pharetra at dapibus in, posuere quis tortor. Cras porttitor libero vel pretium faucibus. Curabitur eget tortor elit. Curabitur vulputate ut magna sed viverra. Ut eleifend ligula turpis. Integer eleifend aliquet scelerisque. Integer facilisis justo ac varius luctus. Suspendisse posuere semper felis at faucibus. Morbi magna magna, aliquet dictum purus non, dignissim fermentum nibh. Aenean sit amet nisi ut erat volutpat cursus in vitae ipsum. Integer tempus, libero vitae imperdiet vestibulum, massa purus porta turpis, finibus scelerisque enim felis at enim. Vivamus eu tincidunt justo. Vivamus finibus sit amet neque sed mattis. Vivamus scelerisque, dui id dignissim mattis, mauris justo efficitur quam, quis finibus turpis lectus nec dolor.
+        </p>
     </div>
 </div>
+Use the temporary links below to manage possible data items for each patient.<br />
+@Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") | 
+@Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds") | 
+@Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments") | 
+@Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms")
