--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/OtherMedsPivots/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/OtherMedsPivots/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model TumorTaskforce_Webapp_1.OtherMedsPivot
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Remove Other Medication";
 }
 
-<h2>Delete</h2>
+<h2>Remove</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to remove this?</h3>
 <div>
     <h4>Other Medication</h4>
     <hr />
