--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/OtherMedsPivots/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/OtherMedsPivots/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TumorTaskforce_Webapp_1.OtherMedsPivot
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Other Medication";
 }
 
 <h2>Edit</h2>
