--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/SymptomsPivots/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/SymptomsPivots/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TumorTaskforce_Webapp_1.SymptomsPivot
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Symptom";
 }
 
 <h2>Edit</h2>
