--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/TreatmentsPivots/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/TreatmentsPivots/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TumorTaskforce_Webapp_1.TreatmentsPivot
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Treatment";
 }
 
 <h2>Edit</h2>
