--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TumorTaskforce_Webapp_1.Patient>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Patients";
 }
 
-<h2>Index</h2>
+<h2>Patient Directory</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
