--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/TreatmentsPivots/Create.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/TreatmentsPivots/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TumorTaskforce_Webapp_1.TreatmentsPivot
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add Treatment";
 }
 
-<h2>Create</h2>
+<h2>Add</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>New Treatment</h4>
+        <h4>Treatment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @*<div class="form-group">
