more aesthetic and functional changes

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -27,8 +27,4 @@
         </p>
     </div>
 </div>
-Use the temporary links below to manage possible data items for each patient.<br />
-@Html.ActionLink("Possible Health Factors", "Index", "PossibleHealthFactors") | 
-@Html.ActionLink("Possible Other Meds", "Index", "PossibleOtherMeds") | 
-@Html.ActionLink("Possible Treatments", "Index", "PossibleTreatments") | 
-@Html.ActionLink("Possible Symptoms", "Index", "PossibleSymptoms")
+Click @Html.ActionLink("Here", "Manage") to manage possible data entries for patients.<br />
