added create new possible symptoms, possible treatments, possible health factors, possible other meds from patient details page (through add). More aesthetic and functional improvements

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
@@ -202,10 +202,10 @@
                 <tag> --- </tag>
                 @Html.ActionLink("Edit", "Edit", "SymptomsPivots", new { id = sp.Id }, null)
                 <tag> | </tag>
-                @Html.ActionLink("Delete", "Delete", "SymptomsPivots", new { id = sp.Id }, null)
+                @Html.ActionLink("Remove", "Delete", "SymptomsPivots", new { id = sp.Id }, null)
                 <br />
             }
-            @Html.ActionLink("New Symptom", "Create", "SymptomsPivots", new { patientId = Model.patientID }, null)
+            @Html.ActionLink("Add Symptom", "Create", "SymptomsPivots", new { patientId = Model.patientID }, null)
             <br />
         </dd>
 
@@ -244,10 +244,10 @@
                 <tag> --- </tag>
                 @Html.ActionLink("Edit", "Edit", "OtherMedsPivots", new { id = sp.Id }, null)
                 <tag> | </tag>
-                @Html.ActionLink("Delete", "Delete", "OtherMedsPivots", new { id = sp.Id }, null)
+                @Html.ActionLink("Remove", "Delete", "OtherMedsPivots", new { id = sp.Id }, null)
                 <br />
             }
-            @Html.ActionLink("New Other Medication", "Create", "OtherMedsPivots", new { patientId = Model.patientID }, null)
+            @Html.ActionLink("Add Other Medication", "Create", "OtherMedsPivots", new { patientId = Model.patientID }, null)
             <br />
         </dd>
 
@@ -285,10 +285,10 @@
                 <tag> --- </tag>
                 @Html.ActionLink("Edit", "Edit", "HealthFactorsPivots", new { id = sp.Id }, null)
                 <tag> | </tag>
-                @Html.ActionLink("Delete", "Delete", "HealthFactorsPivots", new { id = sp.Id }, null)
+                @Html.ActionLink("Remove", "Delete", "HealthFactorsPivots", new { id = sp.Id }, null)
                 <br />
             }
-            @Html.ActionLink("New Health Factor", "Create", "HealthFactorsPivots", new { patientId = Model.patientID }, null)
+            @Html.ActionLink("Add Health Factor", "Create", "HealthFactorsPivots", new { patientId = Model.patientID }, null)
             <br />
         </dd>
 
@@ -333,10 +333,10 @@
                 <tag> --- </tag>
                 @Html.ActionLink("Edit", "Edit", "TreatmentsPivots", new { id = sp.Id }, null)
                 <tag> | </tag>
-                @Html.ActionLink("Delete", "Delete", "TreatmentsPivots", new { id = sp.Id }, null)
+                @Html.ActionLink("Remove", "Delete", "TreatmentsPivots", new { id = sp.Id }, null)
                 <br />
             }
-            @Html.ActionLink("New Treatment", "Create", "TreatmentsPivots", new { patientId = Model.patientID }, null)
+            @Html.ActionLink("Add Treatment", "Create", "TreatmentsPivots", new { patientId = Model.patientID }, null)
             <br />
         </dd>
 
