--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/HealthFactorsPivots/Create.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/HealthFactorsPivots/Create.cshtml
@@ -27,6 +27,7 @@
             @Html.LabelFor(model => model.datapieceID, "Health Factor", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("datapieceID", null, htmlAttributes: new { @class = "form-control" })
+                Don't see it? @Html.ActionLink("Create a new one", "CreateFromPatient", "PossibleHealthFactors", new { TempPatientID = Int32.Parse(Html.ValueFor(model => model.patientID).ToString()) }, null)
                 @Html.ValidationMessageFor(model => model.datapieceID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -57,7 +58,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Add" class="btn btn-default" />
             </div>
         </div>
     </div>
