--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/HealthFactorsPivots/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/HealthFactorsPivots/Delete.cshtml
@@ -59,7 +59,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Remove" class="btn btn-default" /> |
             @Html.ActionLink("Back to Patient", "Details", "Patients", new { id = Int32.Parse(Html.ValueFor(model => model.patientID).ToString()) }, null)
         </div>
     }
