--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleHealthFactors/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleHealthFactors/Index.cshtml
@@ -1,18 +1,19 @@
 ﻿@model IEnumerable<TumorTaskforce_Webapp_1.PossibleHealthFactor>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "All Health Factors";
 }
 
-<h2>Index</h2>
+<h2>All Health Factors</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Health Factor", "Create") - 
+    Or create it from the @Html.ActionLink("Create Patient", "Create", "Patients") page!
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            Health Factor
         </th>
         <th></th>
     </tr>
@@ -24,7 +25,6 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
