--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleOtherMeds/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleOtherMeds/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PossibleOtherMed</h4>
+    <h4>Possible Other Medication</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
