--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Delete.cshtml
@@ -8,17 +8,9 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PossibleSymptom</h4>
+    <h4>Possible Symptom</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.PercentShowing)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PercentShowing)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -26,6 +18,15 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt>
+            Percent
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PercentShowing)
+        </dd>
+
+       
 
     </dl>
 
