--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleTreatments/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleTreatments/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@model IEnumerable<TumorTaskforce_Webapp_1.PossibleTreatment>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "All Treatments";
 }
 
-<h2>Index</h2>
+<h2>All Treatments</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Treatment", "Create") -
+    Or create it from the @Html.ActionLink("Create Patient", "Create", "Patients") page!
 </p>
 <table class="table">
     <tr>
@@ -24,7 +25,6 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
