--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Index.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     @Html.ActionLink("Create New Symptom", "Create") -
-    Or create it from the @Html.ActionLink("Create Patient", "Create", "Patients") page!
+    Or create it from the @Html.ActionLink("Patient", "Index", "Patients") Details page!
 </p>
 
 
