small aesthetic fixes

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Manage.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>Tumor Taskforce </h1>
-    <p class="lead">Unreleased. Use the links above to navigate</p>
+    <h1>Tumor App - Manage</h1>
+    <p class="lead">Use the links below to manage possible entries</p>
 </div>
 
 <div class="row">
