--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
@@ -180,21 +180,21 @@
                 
                 if (sp.date != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.date)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.date)
                 }
                 if (sp.frequency != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.frequency)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.frequency)
                 }
                 if (sp.notes != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.notes)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.notes)
@@ -222,21 +222,21 @@
 
                 if (sp.date != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.date)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.date)
                 }
                 if (sp.frequency != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.frequency)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.frequency)
                 }
                 if (sp.notes != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.notes)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.notes)
@@ -263,21 +263,21 @@
                 @Html.DisplayFor(spitem => sp.PossibleHealthFactor.Name)
                 if (sp.date != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.date)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.date)
                 }
                 if (sp.frequency != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.frequency)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.frequency)
                 }
                 if (sp.notes != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.notes)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.notes)
@@ -304,28 +304,28 @@
                 @Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
                 if (sp.date != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.date)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.date)
                 }
                 if (sp.frequency != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.frequency)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.frequency)
                 }
                 if (sp.notes != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.notes)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.notes)
                 }
                 if (sp.effectiveness != null)
                 {
-                    <tag> - </tag>
+                    <tag> // </tag>
                     @Html.DisplayNameFor(spitem => sp.effectiveness)
                     <tag>: </tag>
                     @Html.DisplayFor(spitem => sp.effectiveness)
